# phone-agent-try

./: .env.example  .gitignore  README.md  main.py  memory.md  package-lock.json  package.json  pyproject.toml  test.py
decks/phone-agent-mid/: slide-01.html  slide-02.html  slide-03.html  slide-04.html  slide-05.html  slide-06.html  slide-outline.md  viewer.html
decks/phone-agent-mid-en/: slide-01.html  slide-02.html  slide-03.html  slide-04.html  slide-05.html  slide-06.html  viewer.html
scripts/: demo.py
src/: config.py  main.py  memory.py
src/agent/: droid_agent.py  task_builder.py
src/cli/: app.py
src/intent/: __init__.py  parser.py  prompts.py  schemas.py
src/router/: __init__.py  router.py
src/services/: base.py  delivery.py  gift.py  mobility.py  reservation.py  shopping.py  travel.py
src/state/: conversation.py
tests/: test_agent.py  test_conversation.py  test_parser.py  test_router.py  test_services.py
